refactored code for Github checks